--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Repositório para armazenar o desafio de web scrap",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon ./src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generateJson": "node ./src/scripts/writeJsonFile.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,15 @@
   "homepage": "https://github.com/samuelLimaSantos/desafio-web-scrap-node#readme",
   "dependencies": {
     "axios": "^0.26.0",
-    "cheerio": "^1.0.0-rc.10"
+    "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "nodemon": "^2.0.15"
   }
 }
